--- a/index.html/index.html
+++ b/index.html/index.html
@@ -6,11 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Website</title>
     <link rel="stylesheet" href="styles.css" />
-    <link
-      href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css"
-      rel="stylesheet"
-      type="text/css"
-    />
+  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <header>
@@ -135,21 +132,21 @@
             class="btn contact-details"
             id="profile-link"
           >
-            <i class="fa fa-github"> Github </i>
+            <i class="fab fa-github"></i> Github
           </a>
           <a
             href="mailto: nivangunevrushali.vn@gmail.com"
             target="_blank"
             class="btn contact-details"
           >
-            <i class="fa fa-regular fa-envelope"> Send a mail </i>
+            <i class="fa-solid fa-envelope"></i> Send a mail
           </a>
           <a
             href="https://www.linkedin.com/in/vrushali-nivangune-a256831b0"
             target="_blank"
             class="btn contact-details"
           >
-            <i class="fa fa-linkedin"> linkedin </i>
+            <i class="fa-brands fa-linkedin"></i> linkdin
           </a>
         </div>
       </section>
